<resources>
    <string name="app_name">Slambook</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="ConPassword">Confirm Password</string>
    <string name="FullName">Full Name</string>
    <string name="Answer">Your Answer</string>
    <string name="enter_username">Please enter your username.</string>
    <string name="back_to_sign_in">Back to sign in.</string>
    <string name="answer_sec_question">Answer this question.</string>
    <string name="your_answer">Your answer here.</string>
    <string name="addEntry">Add Entry</string>
    <string-array name="questions">
        <item>What primary school did you attend?</item>
        <item>In what town or city did your parents meet?</item>
        <item>What time of the day were you born?</item>
        <item>In what town or city was your first full time job?</item>
        <item>What is you first pet\'s name?</item>
    </string-array>
</resources>