<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".EnterUsername">

    <EditText
        android:id="@+id/edtTxtUSNInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:background="@drawable/ic_box_usn"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="215dp"
        android:layout_marginBottom="62dp"
        android:text="@string/enter_username"
        android:textColor="@color/gray"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/edtTxtUSNInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtBacktoSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/back_to_sign_in"
        android:textColor="@color/gray"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnEnterUSN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="89dp"
        android:layout_marginBottom="172dp"
        android:background="?android:selectableItemBackground"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/txtBacktoSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtUSNInput"
        app:srcCompat="@drawable/gray_enter" />

</androidx.constraintlayout.widget.ConstraintLayout>