<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".Register">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="81dp"
                android:layout_marginTop="68dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_box_usn"
                android:ems="10"
                android:hint="@string/FullName"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <ImageButton
                android:id="@+id/btnCancelRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="4dp"
                android:background="?android:selectableItemBackground"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtAnswer"
                app:srcCompat="@drawable/ic_btn_cancel" />

            <ImageButton
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="20dp"
                android:background="?android:selectableItemBackground"
                android:padding="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtAnswer"
                app:srcCompat="@drawable/ic_btn_register" />

            <Spinner
                android:id="@+id/spnrQuestion"
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="82dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_box_usn"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtConPassword" />

            <EditText
                android:id="@+id/edtAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="81dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_box_usn"
                android:ems="10"
                android:hint="@string/Answer"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spnrQuestion" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="135dp"
                android:layout_marginTop="176dp"
                android:layout_marginEnd="64dp"
                android:background="@drawable/ic_txt_title_reg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="81dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_box_usn"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtUsername" />

            <EditText
                android:id="@+id/edtConPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="81dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_box_usn"
                android:ems="10"
                android:hint="@string/ConPassword"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

            <TextView
                android:id="@+id/txtSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="71dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/ic_txt_signin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="81dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_box_usn"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="text"
                android:paddingLeft="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtFullName" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>